front and cards done

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hreint</title>
+    <title>Hreint - Minimal Design</title>
     <!-- CSS -->
     <link rel="stylesheet" href="styles.css">
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,900;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -50,8 +51,73 @@
                 </a>
           </form>
         </div>
-
     </nav>
-    
+    <div class="container-fluid ctn-front">
+        <div class="row">
+            <div class="col-6">
+                <div class="front-text">
+                    <h2 id="front-sub">Keep Your Business</h2>
+                    <h1 id="front-title">Clean & Simple</h1>
+                    <p id="front-desc">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>    
+                </div>
+                <form class="form-btn">
+                    <div class="row">
+                        <div class="col-3">
+                            <button class="btn" id="btn-primary">Learn more</button>
+                        </div>
+                        <div class="col-3">
+                            <button class="btn" id="btn-secondary">Buy now</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <div class="container ctn-card">
+        <div class="row">
+            <div class="col-4">
+                <div class="card" id="front-card">
+                    <img src="..." alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h3 class="card-title">Business Plan Services</h3>
+                        <br>
+                        <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
+                        <br>
+                        <hr>
+                        <p>01</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" id="front-card">
+                    <img src="..." alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h3 class="card-title">Brand Identity</h3>
+                        <br>
+                        <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
+                        <br>
+                        <hr>
+                        <p>02</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" id="front-card">
+                    <img src="..." alt="" class="card-img-top">
+                    <div class="card-body">
+                        <h3 class="card-title">Social Media Planning</h3>
+                        <br>
+                        <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
+                        <br>
+                        <hr>
+                        <p>03</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid ctn-mid">
+
+    </div>
 </body>
 </html>
