--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
     <div class="container-fluid ctn-front">
         <div class="row">
-            <div class="col-6">
+            <div class="col-8">
                 <div class="front-text">
                     <h2 id="front-sub">Keep Your Business</h2>
                     <h1 id="front-title">Clean & Simple</h1>
@@ -84,7 +84,7 @@
                         <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
                         <br>
                         <hr>
-                        <p>01</p>
+                        <p class="grey">01</p>
                     </div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                         <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
                         <br>
                         <hr>
-                        <p>02</p>
+                        <p class="grey">02</p>
                     </div>
                 </div>
             </div>
@@ -110,14 +110,69 @@
                         <p class="card-text">Aenean urna libero, ultricies ut tortor sit amet, convallis commodo nunc. Nam sed convallis urna, ut malesuada sapien.</p>
                         <br>
                         <hr>
-                        <p>03</p>
+                        <p class="grey">03</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="container-fluid ctn-mid">
-
+    <div class="container-fluid ctn-story">
+        <div class="row">
+            <div class="col-6">
+                <div class="story-text">
+                    <h1>Story About Us</h1>
+                    <h3>What we have done from the past</h3>
+                    <br>
+                    <p>Amet nulla facilisi morbi tempus iaculis urna id. Nunc sed velit dignissim sodales ut eu. Diam vulputate ut pharetra sit amet aliquam.</p>    
+                </div>
+            </div>
+        </div>
     </div>
+    <div class="container ctn-work">
+        <div class="row">
+            <div class="col-3">
+                <div class="work-text">
+                    <h1 id="work-title">Our Works .</h1>
+                </div>
+            </div>
+            <div class="col-9">
+                <div class="work-text">
+                    <h1 id="work-desc">Amet nulla facilisi morbi tempus iaculis urna id. Nunc sed velit dignissim sodales ut eu.</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <img src="./assets/photos/alvaro-reyes-qWwpHwip31M-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/boxed-water-is-better-7mr6Yx-8WLc-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/clark-tibbs-oqStl2L5oxI-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/david-van-dijk-3LTht2nxd34-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/diego-ph-fIq0tET6llw-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/harpal-singh-_zKxPsGOGKg-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/hutomo-abrianto-9mPl0Zo7_gQ-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/ilnur-kalimullin-kP1AxmCyEXM-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/jason-briscoe-heEPoapeiVk-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/jo-szczepanska-9OKGEVJiTKk-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/kara-eads-buhmhprfo3g-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/keila-hotzel-lFmuWU0tv4M-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/kelly-sikkema-mdADGzyXCVE-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/kelly-sikkema-o2TRWThve_I-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/markus-spiske-hqCEQTc5gZA-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/med-badr-chemmaoui-ZSPBhokqDMc-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/natalia-y-NMtyjqXdi0k-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/nikita-kachanovsky-bLY5JqP_Ldw-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/s-o-c-i-a-l-c-u-t-OjnmCKmzr3A-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/tim-mossholder-GOMhuCj-O9w-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/toa-heftiba-BP3XOsSPlGA-unsplash.jpg" alt="photo" class="work-image">
+                <img src="./assets/photos/water-journal--EvvsegVoUE-unsplash.jpg" alt="photo" class="work-image">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                <button id="btn-primary">LOAD MORE</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
